chore: update vehicle models timestamps
